--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Index Page</title>
+    <title>Jolly Management</title>
+    <link rel="icon" type="image/x-icon" href="img/favicon.png">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
     <meta name="theme-color" content="#fff">
@@ -41,7 +42,7 @@ if (viewportmeta) {
         <div class="header js-header">
           <div class="header__center center"><a class="header__logo" href="#"><img class="header__pic" src="img/logo.svg" alt=""></a>
             <div class="header__wrap js-header-wrap">
-              <nav class="header__nav"><a class="header__link js-link" href="#main">Home</a><a class="header__link js-link" href="#about">About Us</a><a class="header__link js-link" href="#gallery">Our Services</a></nav>
+              <nav class="header__nav"><a class="header__link js-link" href="#main">Home</a><a class="header__link js-link" href="#about">About Us</a></nav>
               <div class="header__btns"><button class="header__btn btn btn_white"><span class="btn__font">Contact </span> US</button></div>
             </div><button class="header__burger js-header-burger"></button>
           </div>
@@ -66,33 +67,24 @@ if (viewportmeta) {
         <div class="about__head">
           <div class="about__center center">
             <h2 class="about__title title" data-aos>About Us</h2>
-            <div class="about__list">
-              <div class="about__item" data-aos="animation-scale-y">
-                <div class="about__category">INFLUENCER CAMPAIGNS</div>
-                <div class="about__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-              </div>
-              <div class="about__item" data-aos="animation-scale-y" data-aos-delay="200">
-                <div class="about__category">SOCIAL MEDIA MARKETING</div>
-                <div class="about__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-              </div>
-              <div class="about__item" data-aos="animation-scale-y" data-aos-delay="400">
-                <div class="about__category">EVENTS/TRIPS</div>
-                <div class="about__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-              </div>
-            </div>
+            
           </div>
         </div>
         <div class="about__container">
           <div class="about__row">
             <div class="about__col">
-              <div class="about__preview" data-aos><img class="about__pic" src="img/about-pic-1.jpg" alt=""></div>
+              <div class="about__preview" data-aos><img class="about__pic" src="img/JOLLYBRAND-MANAGEMENT.png" alt=""></div>
             </div>
             <div class="about__col">
               <div class="about__details" data-aos>
                 <div class="about__info">Lorem Ipsum</div>
-                <div class="about__title title title_sm">Influencer Campaigns</div>
-                <div class="about__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-                <div class="about__control"><button class="about__btn btn btn_border">Contact Us</button></div>
+                <div class="about__title title title_sm">A-Z Management</div>
+                <div class="about__text">
+
+If you’re a forward thinker and want to grow your personal brand, then we’re your people.
+<br><br>Our fresh brand of talent management offers you a full-stop approach to awareness and revenue. In short? We’ll help you grow and then some.
+                  </div>
+
               </div>
             </div>
           </div>
@@ -101,14 +93,14 @@ if (viewportmeta) {
               <div class="about__inner">
                 <div class="about__details" data-aos>
                   <div class="about__info">Lorem Ipsum</div>
-                  <div class="about__title title title_sm">Social Media Marketing</div>
+                  <div class="about__title title title_sm">US-Based</div>
                   <div class="about__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-                  <div class="about__control"><button class="about__btn btn btn_border">Contact Us</button></div>
+
                 </div>
               </div>
             </div>
             <div class="about__col">
-              <div class="about__preview" data-aos><img class="about__pic" src="img/about-pic-2.jpg" alt=""></div>
+              <div class="about__preview" data-aos><img class="about__pic" src="img/about-pic-2.png" alt=""></div>
             </div>
           </div>
           <div class="about__row">
@@ -118,10 +110,25 @@ if (viewportmeta) {
             <div class="about__col">
               <div class="about__details" data-aos>
                 <div class="about__info">Lorem Ipsum</div>
-                <div class="about__title title title_sm">Events/Trips</div>
+                <div class="about__title title title_sm">Full Chatter Team</div>
                 <div class="about__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-                <div class="about__control"><button class="about__btn btn btn_border">Contact Us</button></div>
+
               </div>
+            </div>
+          </div>
+          <div class="about__row">
+            <div class="about__col">
+              <div class="about__inner">
+                <div class="about__details" data-aos>
+                  <div class="about__info">Lorem Ipsum</div>
+                  <div class="about__title title title_sm">Payment Processing</div>
+                  <div class="about__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+                  <div class="about__control"><button class="about__btn btn btn_border">Contact Us</button></div>
+                </div>
+              </div>
+            </div>
+            <div class="about__col">
+              <div class="about__preview" data-aos><img class="about__pic" src="img/about-pic-4.png" alt=""></div>
             </div>
           </div>
         </div>
@@ -130,24 +137,24 @@ if (viewportmeta) {
         <div class="gallery__container">
           <div class="gallery__slider owl-carousel js-slider-gallery" data-aos>
             <div class="gallery__slide">
-              <div class="gallery__preview" data-aos><img class="gallery__pic" src="img/photo-1.jpg" alt=""></div>
-              <div class="gallery__preview" data-aos data-aos-delay="100"><img class="gallery__pic" src="img/photo-3.jpg" alt=""></div>
-              <div class="gallery__preview" data-aos data-aos-delay="200"><img class="gallery__pic" src="img/photo-2.jpg" alt=""></div>
+              <div class="gallery__preview" data-aos><img class="gallery__pic" src="img/photo-1.png" alt=""></div>
+              <div class="gallery__preview" data-aos data-aos-delay="100"><img class="gallery__pic" src="img/photo-3.png" alt=""></div>
+              <div class="gallery__preview" data-aos data-aos-delay="200"><img class="gallery__pic" src="img/photo-2.png" alt=""></div>
             </div>
             <div class="gallery__slide">
-              <div class="gallery__preview" data-aos data-aos-delay="300"><img class="gallery__pic" src="img/photo-4.jpg" alt=""></div>
-              <div class="gallery__preview" data-aos data-aos-delay="400"><img class="gallery__pic" src="img/photo-6.jpg" alt=""></div>
-              <div class="gallery__preview" data-aos data-aos-delay="500"><img class="gallery__pic" src="img/photo-5.jpg" alt=""></div>
+              <div class="gallery__preview" data-aos data-aos-delay="300"><img class="gallery__pic" src="img/photo-4.png" alt=""></div>
+              <div class="gallery__preview" data-aos data-aos-delay="400"><img class="gallery__pic" src="img/photo-6.png" alt=""></div>
+              <div class="gallery__preview" data-aos data-aos-delay="500"><img class="gallery__pic" src="img/photo-5.png" alt=""></div>
             </div>
             <div class="gallery__slide">
-              <div class="gallery__preview"><img class="gallery__pic" src="img/photo-1.jpg" alt=""></div>
-              <div class="gallery__preview"><img class="gallery__pic" src="img/photo-3.jpg" alt=""></div>
-              <div class="gallery__preview"><img class="gallery__pic" src="img/photo-2.jpg" alt=""></div>
+              <div class="gallery__preview"><img class="gallery__pic" src="img/photo-1.png" alt=""></div>
+              <div class="gallery__preview"><img class="gallery__pic" src="img/photo-3.png" alt=""></div>
+              <div class="gallery__preview"><img class="gallery__pic" src="img/photo-2.png" alt=""></div>
             </div>
             <div class="gallery__slide">
-              <div class="gallery__preview"><img class="gallery__pic" src="img/photo-4.jpg" alt=""></div>
-              <div class="gallery__preview"><img class="gallery__pic" src="img/photo-6.jpg" alt=""></div>
-              <div class="gallery__preview"><img class="gallery__pic" src="img/photo-5.jpg" alt=""></div>
+              <div class="gallery__preview"><img class="gallery__pic" src="img/photo-4.png" alt=""></div>
+              <div class="gallery__preview"><img class="gallery__pic" src="img/photo-6.png" alt=""></div>
+              <div class="gallery__preview"><img class="gallery__pic" src="img/photo-5.png" alt=""></div>
             </div>
           </div>
         </div>
@@ -164,7 +171,7 @@ if (viewportmeta) {
       </div>
       <div class="footer">
         <div class="footer__center center"><a class="footer__logo header__logo" href="#"><img class="footer__pic header__pic" style="width:200px" src="img/logo.svg" alt=""></a>
-          <div class="footer__menu"><a class="footer__link js-link" href="#main">Home</a><a class="footer__link js-link" href="#about">About Us</a><a class="footer__link js-link" href="#gallery">Our Services</a><a class="footer__link js-link" href="#">Contact Us</a></div>
+          <div class="footer__menu"><a class="footer__link js-link" href="#main">Home</a><a class="footer__link js-link" href="#about">About Us</a><a class="footer__link js-link" href="#">Contact Us</a></div>
           <div class="footer__social social social_dark"><a class="social__link" href="#"><svg class="icon icon-facebook">
                 <use xlink:href="img/sprite.svg#icon-facebook"></use>
               </svg></a><a class="social__link" href="#"><svg class="icon icon-twitter">
